fix: DEV-3901: Paragraph overflow text issue when outliner disabled (#1072)

--- a/src/components/App/App.styl
+++ b/src/components/App/App.styl
@@ -60,7 +60,6 @@
 
   &__annotation
     padding 1em
-    overflow auto
 
   &__infobar
     padding 6px 1em 7px
